End of first round of cleaning and a few initial models

--- a/code/cedam_ii.ipynb
+++ b/code/cedam_ii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "d4bd5fa3",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,28 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime, time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "754b3bf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ultimately decided to also do a bit of mdoeling here...\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import RidgeCV\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.feature_selection import RFECV, RFE"
    ]
   },
   {
@@ -760,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "25717592",
    "metadata": {},
    "outputs": [],
@@ -770,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "id": "60c3220a",
    "metadata": {},
    "outputs": [],
@@ -783,23 +805,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "b4a4919d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df['start_time'] = pd.to_datetime(df['start_time'], format='%H:%M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "0d8c025d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#A final initial time manipulation I'll do is to if the taxi service started during the day or not. \n",
+    "#January 15th in Chicago, per a quite google search, lists 7:15 and 16:45 as sunrise/set. I'll rely on this, not wanting to change\n",
+    "#from day to day. Furthermore, unsure which direction to be \"strict\" in, as I'm unsure if people are in greater moods during\n",
+    "#the day or at night.\n",
+    "\n",
+    "#on the topic, a bit of a reief we're doing this just in January/one month as this factor would change over time;\n",
+    "#hence the desire to do a timeseries noob.\n",
+    "\n",
+    "df['night'] = [1 if (i < time(7,15)) or (i > time(16,45)) else 0 for i in df['start_time']]\n",
+    "\n",
+    "#Should be done with these for now.\n",
+    "df = df.drop(['day_of_week', 'start_date', 'start_time'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c8921a63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The final matter to consider is our target: tips. I'm unsure if I should keep them in dollar amounts or a percentage of the pre-tip\n",
+    "#fare. I'm inclined the later as I think it'll be more robust to large trips as well as more descriptive of behavior overall...\n",
+    "\n",
+    "#Would like to right on this more later, but eh...\n",
+    "\n",
+    "df['tip_percentage'] = df['tips'] / df['trip_total_pre_tip']\n",
+    "\n",
+    "df = df.drop(['tips', 'trip_total_pre_tip'], axis = 1) #Given that it's a simple add of the previous two, it's not contributing\n",
+    "#anything else anymore to having it. So, let us retain our individual fares and extras."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "bb854524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Great,we should be ready for actual modeling round, at least with this round:\n",
+    "\n",
+    "#We'll also drop taxi id for now... Oh, and pickup/dropoff as I totally forgot about those two....\n",
+    "X = df.drop(['tip_percentage', 'taxi_id', 'pickup_community_area', 'dropoff_community_area'], axis=1)\n",
+    "y = df['tip_percentage']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.25, random_state=26)\n",
+    "#Re. 26 - I like that number. Discussion not for now\n",
+    "\n",
+    "ss = StandardScaler()\n",
+    "X_train = ss.fit_transform(X_train)\n",
+    "X_test = ss.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b63d7f00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.039061156496955074 0.06738052175978615\n",
+      "0.06939697775750422\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LinearRegression()\n",
+    "\n",
+    "current_model = lr.fit(X_train, y_train)\n",
+    "\n",
+    "current_preds = lr.predict(X_test)\n",
+    "\n",
+    "print(current_model.score(X_train, y_train), current_model.score(X_test, y_test))\n",
+    "print(cross_val_score(lr, X_train, y_train, cv = 5).mean()) #Oh.... thats' horrible... albeit lr but stil..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0ec7b283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8323852336302087 -0.006500239154382914\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor() #Without even tuning, let's at least get something....\n",
+    "\n",
+    "current_model = rf.fit(X_train, y_train)\n",
+    "\n",
+    "current_preds = rf.predict(X_test)\n",
+    "\n",
+    "print(current_model.score(X_train, y_train), current_model.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35c7881e",
+   "metadata": {},
+   "source": [
+    "Oh man.... that's even worse... So, we're obviously not giving up yet, but yeah... this is not looking good.\n",
+    "\n",
+    "Then again, it could show you how whimsical tiping is and there's no trend in the tip percentage based upon this data.\n",
+    "NOW, pragmatically there's likely a trend between absolute dollars spend re. fare and trip, but at least re.percentage..."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8921a63",
+   "id": "fc1a0e26",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
+   "id": "81b2ebce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c80ca6d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "cb84c008",
    "metadata": {},
    "outputs": [
@@ -830,13 +991,10 @@
        "      <th>pickup_community_area</th>\n",
        "      <th>dropoff_community_area</th>\n",
        "      <th>fare</th>\n",
-       "      <th>tips</th>\n",
        "      <th>extras</th>\n",
-       "      <th>start_date</th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>trip_total_pre_tip</th>\n",
-       "      <th>day_of_week</th>\n",
        "      <th>weekend</th>\n",
+       "      <th>night</th>\n",
+       "      <th>tip_percentage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -848,13 +1006,10 @@
        "      <td>32.0</td>\n",
        "      <td>32.0</td>\n",
        "      <td>5.65</td>\n",
-       "      <td>1.00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2015-01-14</td>\n",
-       "      <td>14:30:00</td>\n",
-       "      <td>5.65</td>\n",
-       "      <td>Wednesday</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.176991</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -864,13 +1019,10 @@
        "      <td>24.0</td>\n",
        "      <td>22.0</td>\n",
        "      <td>12.25</td>\n",
-       "      <td>2.45</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2015-01-16</td>\n",
-       "      <td>03:30:00</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>Friday</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -880,13 +1032,10 @@
        "      <td>4.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>11.65</td>\n",
-       "      <td>2.91</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>01:30:00</td>\n",
-       "      <td>11.65</td>\n",
-       "      <td>Thursday</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.249785</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -896,13 +1045,10 @@
        "      <td>6.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>3.85</td>\n",
-       "      <td>15.71</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2015-01-24</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>3.85</td>\n",
-       "      <td>Saturday</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.080519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -912,13 +1058,10 @@
        "      <td>6.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>4.85</td>\n",
-       "      <td>1.00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2015-01-06</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>4.85</td>\n",
-       "      <td>Tuesday</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.206186</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -932,22 +1075,15 @@
        "3  taxi_0           104         0.4                    6.0   \n",
        "4  taxi_0           176         0.8                    6.0   \n",
        "\n",
-       "   dropoff_community_area   fare   tips  extras  start_date start_time  \\\n",
-       "0                    32.0   5.65   1.00     0.0  2015-01-14   14:30:00   \n",
-       "1                    22.0  12.25   2.45     0.0  2015-01-16   03:30:00   \n",
-       "2                     6.0  11.65   2.91     0.0  2015-01-01   01:30:00   \n",
-       "3                     6.0   3.85  15.71     0.0  2015-01-24   06:00:00   \n",
-       "4                     6.0   4.85   1.00     0.0  2015-01-06   22:00:00   \n",
-       "\n",
-       "   trip_total_pre_tip day_of_week  weekend  \n",
-       "0                5.65   Wednesday        0  \n",
-       "1               12.25      Friday        0  \n",
-       "2               11.65    Thursday        0  \n",
-       "3                3.85    Saturday        1  \n",
-       "4                4.85     Tuesday        0  "
+       "   dropoff_community_area   fare  extras  weekend  night  tip_percentage  \n",
+       "0                    32.0   5.65     0.0        0      0        0.176991  \n",
+       "1                    22.0  12.25     0.0        0      1        0.200000  \n",
+       "2                     6.0  11.65     0.0        0      1        0.249785  \n",
+       "3                     6.0   3.85     0.0        1      1        4.080519  \n",
+       "4                     6.0   4.85     0.0        0      1        0.206186  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
