A few more small updates

--- a/code/cedam_ii.ipynb
+++ b/code/cedam_ii.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "754b3bf9",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e6ffd221",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "4        5.85  Credit Card  Yellow Cab  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "03100a41",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5a35d3fb",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9afb181a",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "225b1a7b",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d001941a",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f6130671",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "08965477",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
        "Name: trip_seconds, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "94153367",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "Name: trip_miles, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0bae2d4c",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "88ccad9d",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "144eae3d",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "Name: extras, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "f76b7f96",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
        "Name: trip_total, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6f4ad45e",
    "metadata": {},
    "outputs": [
@@ -622,12 +622,12 @@
     "\n",
     "df['trip_total_pre_tip'] = df['trip_total'] - df['tips']\n",
     "\n",
-    "df = df.drop(['trip_total'], axis = 1)"
+    "df = df.drop(['trip_total'], axis = 1) #Moving to later on"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "727373dd",
    "metadata": {},
    "outputs": [
@@ -640,7 +640,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "84f74200",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
        "Credit Card   38342.0  2.913440  2.739069  0.01  1.99  2.0  3.0  270.00"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "39d93846",
    "metadata": {},
    "outputs": [],
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "25717592",
    "metadata": {},
    "outputs": [],
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "60c3220a",
    "metadata": {},
    "outputs": [],
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "b4a4919d",
    "metadata": {},
    "outputs": [],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "0d8c025d",
    "metadata": {},
    "outputs": [],
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "c8921a63",
    "metadata": {},
    "outputs": [],
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "bb854524",
    "metadata": {},
    "outputs": [],
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "b63d7f00",
    "metadata": {},
    "outputs": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "0ec7b283",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8323852336302087 -0.006500239154382914\n"
+      "0.8196800800156226 -0.004622043017374677\n"
      ]
     }
    ],
@@ -931,36 +931,149 @@
     "Oh man.... that's even worse... So, we're obviously not giving up yet, but yeah... this is not looking good.\n",
     "\n",
     "Then again, it could show you how whimsical tiping is and there's no trend in the tip percentage based upon this data.\n",
-    "NOW, pragmatically there's likely a trend between absolute dollars spend re. fare and trip, but at least re.percentage..."
+    "NOW, pragmatically there's likely a trend between absolute dollars spend re. fare and trip, but at least re.percentage...\n",
+    "\n",
+    "I'll at least look at some individual taxis before doing at least some type of regression...\n",
+    "\n",
+    "Plus, it might be worthwhile to consider the rate of doing one big one versus many small ones... like all those taxi drivers that refused to make $20 to drive me a few blocks to the bus station lest a big whale get away and miss out on $200 when I was in Ukraine this past fall (2023)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "fc1a0e26",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    38349.000000\n",
+       "mean         0.240101\n",
+       "std          0.186880\n",
+       "min          0.000260\n",
+       "25%          0.150376\n",
+       "50%          0.200000\n",
+       "75%          0.283688\n",
+       "max         21.739130\n",
+       "Name: tip_percentage, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['tip_percentage'].describe()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "81b2ebce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "208\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "taxi_id\n",
+       "taxi_154    492\n",
+       "taxi_197    434\n",
+       "taxi_139    424\n",
+       "taxi_40     408\n",
+       "taxi_167    400\n",
+       "taxi_163    380\n",
+       "taxi_195    363\n",
+       "taxi_72     357\n",
+       "taxi_79     357\n",
+       "taxi_84     356\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Hmm, this kinda seems like a sql thing. Oh well...\n",
+    "print(len(df['taxi_id'].value_counts()))\n",
+    "\n",
+    "taxi_id_df = df['taxi_id'].value_counts(ascending=False).reset_index()\n",
+    "\n",
+    "df['taxi_id'].value_counts(ascending=False)[:10]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c80ca6d0",
+   "execution_count": 65,
+   "id": "245bdacc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "i = -1 #for browing purposes"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
+   "id": "c80ca6d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "taxi_id    taxi_154\n",
+      "count           492\n",
+      "Name: 0, dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "count    492.000000\n",
+       "mean       0.250750\n",
+       "std        0.111740\n",
+       "min        0.009266\n",
+       "25%        0.176991\n",
+       "50%        0.210532\n",
+       "75%        0.306527\n",
+       "max        0.854701\n",
+       "Name: tip_percentage, dtype: float64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i += 1\n",
+    "\n",
+    "print(taxi_id_df.iloc[i])\n",
+    "\n",
+    "df[df['taxi_id']==taxi_id_df.iloc[0,i]]['tip_percentage'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "207d7e25",
+   "metadata": {},
+   "source": [
+    "At least describing the first taxi, who worked 492 trips, notice that his median type is higher. Perhaps due to his experience he knows how to give people a comfortable ride such that they want to tip more."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "cb84c008",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1196,7 @@
        "4                     6.0   4.85     0.0        0      1        0.206186  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
